--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ django-bootstrap-form==3.4
 django-bootstrap4==0.0.7
 django-braces==1.13.0
 django-crispy-forms==1.7.2
+django-cors-headers==3.2.0
 django-filter==1.1.0
 django-hstore==1.4.2
 django-jet==1.0.8
@@ -23,6 +24,7 @@ djangorestframework==3.8.2
 djangorestframework-gis==0.13
 djangorestframework-hstore==1.3
 djangorestframework-jwt==1.11.0
+django-debug-toolbar==2.1
 docopt==0.6.2
 idna==2.7
 itypes==1.1.0
@@ -35,8 +37,8 @@ openapi-codec==1.3.2
 passlib==1.7.1
 Pillow==5.3.0
 pipreqs==0.4.9
-psycopg2==2.7.5
-psycopg2-binary==2.7.5
+#psycopg2==2.7.5
+#psycopg2-binary==2.7.5
 PyJWT==1.6.4
 python3-openid==3.1.0
 pytz==2018.5
