--- a/requirements.txt
+++ b/requirements.txt
@@ -30,7 +30,7 @@ idna==2.7
 itypes==1.1.0
 Jinja2==2.10
 Markdown==2.6.11
-MarkupSafe==1.0
+# MarkupSafe==1.0
 oauth2-provider==0.0
 oauthlib==2.1.0
 openapi-codec==1.3.2
